--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@elbrus/eslint-config": "^1.0.0",
     "@eslint/js": "^9.16.0",
@@ -20,16 +19,22 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "sharp": "^0.33.5"
-  }
+  },
+  "description": ""
 }
