--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "adm-zip": "^0.5.16",
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
