--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "dbf": "^0.2.0",
     "dbf-parser": "^0.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
