--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,10 @@
-PORT= 
-DB_USER= 
-DB_PASS= 
-DB_NAME= 
-DB_HOST= 
-ACCESS_TOKEN_SECRET= 
-REFRESH_TOKEN_SECRET=
+PORT = 
+DB_USER = 
+DB_PASS = 
+DB_NAME = 
+DB_HOST = 
+ACCESS_TOKEN_SECRET = 
+REFRESH_TOKEN_SECRET =
+FTP_HOST = 
+FTP_USER = 
+FTP_PASSWORD = 
