--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,9 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "unrar": "^0.2.0",
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   }
 }
