--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "dbf-parser": "^0.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -41,7 +42,6 @@
     "unrar": "^0.2.0",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
-    "sharp": "^0.33.5"
   },
   "description": ""
 }
