--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,7 @@
     "sharp": "^0.33.5",
     "unrar": "^0.2.0",
     "winston": "^3.17.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
     "sharp": "^0.33.5"
   },
   "description": ""
